add auto font-size

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               </ul>
               <p class="foreignContentText">
                 інші документи, які потрібно буде витребувати навіть з-за
-                кордону/
+                кордону.
               </p>
             </div>
             <img
@@ -424,8 +424,7 @@
                 />
                 <p class="sliderTeamItemTitle">КОВАЛЬ ОЛЕГ</p>
                 <p class="lng-slider1b sliderTeamItemText">
-                  ВЛАСНИК КОМПАНІЇ <br />
-                  КОVAL LEGAL GROUP
+                  ВЛАСНИК КОМПАНІЇ КОVAL LEGAL GROUP
                 </p>
               </li>
               <li class="sliderTeamItem">
@@ -436,8 +435,7 @@
                 />
                 <p class="lng-slider2a sliderTeamItemTitle">НОВІКОВА ОЛЕНА</p>
                 <p class="lng-slider2b sliderTeamItemText">
-                  ДИРЕКТОР ПО <br />
-                  ТЕХНІЧНИМ НАПРЯМАМ
+                  ДИРЕКТОР ПО ТЕХНІЧНИМ НАПРЯМАМ
                 </p>
               </li>
               <li class="sliderTeamItem">
@@ -448,8 +446,7 @@
                 />
                 <p class="sliderTeamItemTitle">КИРПІЧНІКОВА АННА</p>
                 <p class="lng-slider3b sliderTeamItemText">
-                  КЕРІВНИК <br />
-                  КОМЕРЦІЙНОГО ДЕПАРТАМЕНТУ
+                  КЕРІВНИК КОМЕРЦІЙНОГО ДЕПАРТАМЕНТУ
                 </p>
               </li>
               <li class="sliderTeamItem">
@@ -460,8 +457,7 @@
                 />
                 <p class="sliderTeamItemTitle">ЛАВРЕНЧУК МАРИНА</p>
                 <p class="lng-slider4b sliderTeamItemText">
-                  КЕРІВНИК <br />
-                  ЮРИДИЧНОГО ДЕПАРТАМЕНТУ
+                  КЕРІВНИК ЮРИДИЧНОГО ДЕПАРТАМЕНТУ
                 </p>
               </li>
             </ul>
@@ -475,18 +471,25 @@
         <h6 class="footerTitle">НАШІ КОНТАКТИ</h6>
       </div>
       <div class="footerBackground">
-        <div class="container"> 
-            <div class="footerContent">
+        <div class="container">
+          <div class="footerContent">
             <img
               class="footerLogo"
               src="./src/images/logoDesktop.png"
               alt="відновлення документів"
               title="відновлення документів"
             />
-            <p class="footerSlogan">З Любов`ю до Справи, <br/> з Повагою до Вас!</p>
+            <p class="footerSlogan">
+              З Любов`ю до Справи, <br />
+              з Повагою до Вас!
+            </p>
             <ul class="footerList">
               <li class="footerItem">
-                <img src="./src/images/icon-phone.svg" alt="телефон" class="footerContactsImage1">
+                <img
+                  src="./src/images/icon-phone.svg"
+                  alt="телефон"
+                  class="footerContactsImage1"
+                />
                 <div class="footerContacts">
                   <p class="footerContactsTitle">Є запитання?</p>
                   <a href="tel:+380981383979"
@@ -495,24 +498,36 @@
                 </div>
               </li>
               <li class="footerItem">
-                <img src="./src/images/icon-envelope.svg" alt="емейл" class="footerContactsImage2">
+                <img
+                  src="./src/images/icon-envelope.svg"
+                  alt="емейл"
+                  class="footerContactsImage2"
+                />
                 <div class="footerContacts">
                   <p class="footerContactsTitle">Пошта</p>
                   <a href="mailto:callcenter.via.klg@gmail.com"
-                    ><p class="footerContactsText">callcenter.via.klg@gmail.com</p></a
+                    ><p class="footerContactsText">
+                      callcenter.via.klg@gmail.com
+                    </p></a
                   >
                 </div>
               </li>
               <li class="footerItem">
-                <img src="./src/images/icon-map.svg" alt="адреса" class="footerContactsImage3">
+                <img
+                  src="./src/images/icon-map.svg"
+                  alt="адреса"
+                  class="footerContactsImage3"
+                />
                 <div class="footerContacts">
                   <p class="footerContactsTitle">Адреса</p>
-                  <p class="footerContactsText">м. Київ, вул. Ковпака, 17, оф. 3-4</p>
+                  <p class="footerContactsText">
+                    м. Київ, вул. Ковпака, 17, оф. 3-4
+                  </p>
                 </div>
               </li>
             </ul>
-          </div></div>
-       
+          </div>
+        </div>
       </div>
     </footer>
     <!-- SCRIPTS -->
