--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           />
 
           <div class="headerContent">
-            <div class="headerContactsWrap">
+            <div class="headerContactsWrap1">
               <p class="headerContacts">Koval Legal Group</p>
               <p class="headerContacts">м. Київ, вул. Ковпака, 17, оф. 3-4</p>
               <a href="mailto:callcenter.via.klg@gmail.com"
@@ -41,11 +41,10 @@
                 ><p class="headerContacts">+380981383979</p></a
               >
             </div>
-
             <nav class="navMenu">
               <ul class="navMenuList">
                 <li class="navMenuItem">
-                  <a href="#"
+                  <a class="navMenuLink" href="#"
                     ><p class="navMenuText">
                       Поновлення <br />
                       документів
@@ -53,7 +52,7 @@
                   >
                 </li>
                 <li class="navMenuItem">
-                  <a href="#"
+                  <a class="navMenuLink" href="#"
                     ><p class="navMenuText">
                       Як поновити документи <br />
                       після втрати?
@@ -61,7 +60,7 @@
                   >
                 </li>
                 <li class="navMenuItem">
-                  <a href="#"
+                  <a class="navMenuLink" href="#"
                     ><p class="navMenuText">
                       Поновлення документів <br />
                       для іноземців
@@ -69,7 +68,7 @@
                   >
                 </li>
                 <li class="navMenuItem">
-                  <a href="#"
+                  <a class="navMenuLink" href="#"
                     ><p class="navMenuText">
                       Встановлення <br />
                       особи
@@ -79,6 +78,16 @@
                 <li class="navMenuItem">
                   <a href="#"><p class="navMenuText">Як замовити?</p></a>
                 </li>
+                <li class="headerContactsWrap2">
+                    <p class="headerContacts">Koval Legal Group</p>
+                    <p class="headerContacts">м. Київ, вул. Ковпака, 17, оф. 3-4</p>
+                    <a href="mailto:callcenter.via.klg@gmail.com"
+                      ><p class="headerContacts">callcenter.via.klg@gmail.com</p></a
+                    >
+                    <a href="tel:+380981383979"
+                      ><p class="headerContacts">+380981383979</p></a
+                    >
+                  </li>
               </ul>
             </nav>
           </div>
