--- a/index.html
+++ b/index.html
@@ -541,18 +541,6 @@
     </footer>
     <!-- SCRIPTS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script>
-      var slider = tns({
-        container: ".my-slider",
-        items: 1,
-        slideBy: 1,
-        autoplay: true,
-        speed: 300,
-        mode: "gallery",
-        nav: false,
-        controls: false,
-        autoplayButtonOutput: false,
-      });
-    </script>
+    <script src='./src/js/slider.js' type="module"></script>
   </body>
 </html>
