--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </ul>
           <p class="cardsTextBottom">
             Інколи, якщо в результаті перевірок не встановлено особу
-            громадянина, який втратив документ, проводиться обов’язкова
+            громадянина, який <br/> втратив  документ, проводиться обов’язкова
             процедура встановлення особи.
           </p>
         </div>
