change Image recovery section

--- a/index.html
+++ b/index.html
@@ -116,21 +116,12 @@
                 </p>
                 <p class="recoveryText">Читайте ↓ та телефонуйте до нас.</p>
               </div>
-
-              <div class="recoveryImagesWrap">
                 <img
-                  class="recoveryImageLeft"
-                  src="./src/images/paspDesktop.png"
-                  alt="поновлення паспорта"
-                  title="поновлення паспорта"
-                />
-                <img
-                  class="recoveryImageRight"
+                  class="recoveryImage"
                   src="./src/images/certBirthDesktop.jpg"
                   alt="поновлення свідоцтва про народження"
                   title="поновлення свідоцтва про народження"
-                />
-              </div>
+                />              
             </div>
           </div>
         </div>
