fix image title

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 <img
                   class="recoveryImage"
                   src="./src/images/certBirthDesktop.jpg"
-                  alt="поновлення свідоцтва про народження"
-                  title="поновлення свідоцтва про народження"
+                  alt="відновлення втрачених документів"
+                  title="відновлення втрачених документів"
                 />              
             </div>
           </div>
